# reachy-mini-fitness-trainer

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  style.css
reachy_mini_fitness_trainer/: __init__.py  exercise_tracker.py  main.py  pose_detector.py  reachy_coach.py  stt_service.py  tts_service.py  web_server.py
reachy_mini_fitness_trainer/static/: index.html  main.js  style.css
