[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-fitness-trainer"
version = "1.0.0"
description = "AI Fitness Trainer for Reachy Mini - Voice-coached workout companion that counts your reps!"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Francisco Cordoba Otalora"},
    {name = "SAM (Samantha AI)"}
]
keywords = ["reachy-mini", "fitness", "ai", "pose-detection", "workout", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "reachy-mini>=1.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "mediapipe>=0.10.8",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Franciscomoney/reachy-mini-fitness-trainer"
Repository = "https://github.com/Franciscomoney/reachy-mini-fitness-trainer"

[project.entry-points."reachy_mini_apps"]
reachy-mini-fitness-trainer = "reachy_mini_fitness_trainer.main:ReachyMiniFitnessTrainer"

[tool.setuptools.packages.find]
where = ["."]
include = ["reachy_mini_fitness_trainer*"]
